[tool.poetry]
name = "exterminator"
version = "0.1.0"
description = "The Exterminator"
authors = ["h3nnn4n <colosseum@h3nnn4n.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.21.4"
colosseum-sdk = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
